--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -35,6 +35,7 @@
 
   --max-width-page-content: 77rem; /* 1232px */
 
+  --spacing-x-small: 0.25rem;
   --spacing-small: 0.5rem;
   --spacing-medium: 1rem;
   --spacing-large: 2rem;
